--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "opensync/platform/openwrt"]
 	path = opensync/platform/openwrt
 	url = git@github.com:plume-design/opensync-platform-openwrt.git
-[submodule "opensync/vendor/armvirt"]
-	path = opensync/vendor/armvirt
-	url = git@github.com:plume-design/opensync-vendor-armvirt.git
+[submodule "opensync/vendor/bcm"]
+	path = opensync/vendor/bcm
+	url = git@github.com:plume-design/opensync-platform-bcm.git
